# chess

chess_ai/: CMakeLists.txt
chess_ai/src/: board.cpp  board.h  eval.cpp  eval.h  main.cpp  main_gui.cpp  move.h  movegen.cpp  movegen.h  perft.cpp  perft.h  search.cpp  search.h
